stage/network/homepage-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-http
  namespace: homepage # Altere para o namespace onde o Authelia está instalado
spec:
  entryPoints:
    - websecure # Ouve na porta HTTPS (443) do Traefik
  routes:
    - match: Host(`homepage.devtechdojo.com.br`) # O subdomínio que você quer usar para o Authelia
      kind: Rule
      services:
        - name: homepage # Nome exato do serviço do Authelia no Kubernetes
          port: 3000 
      #middlewares:
      #  - name: authelia-headers # Vincula o middleware aqui
  tls:
    # Se você usa o certificado da Cloudflare (ou Let's Encrypt no Traefik), 
    # certifique-se de deixar o bloco TLS ativo, mesmo que vazio, para o Traefik aceitar conexões HTTPS.
    secretName: ""
