stage/network/teleport-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teleport-ingress-tcp
  namespace: teleport-cluster # Mesmo namespace onde está o seu svc do teleport
spec:
  entryPoints:
    - websecure # Porta 443 do seu Traefik
  routes:
    - match: HostSNI(`teleport.devtechdojo.com.br`) # Substitua pelo seu domínio do Teleport
      services:
        - name: teleport-cluster
          port: 443
  tls:
    passthrough: true # OBRIGATÓRIO: O próprio Teleport deve gerenciar e descriptografar o TLS/Certificados
